--- a/caliguland-game/package.json
+++ b/caliguland-game/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "dev:blockchain": "ENABLE_BLOCKCHAIN=true ts-node src/index.ts",
-    "dev:fast": "TEST_MODE=true GAME_DURATION=300 ts-node src/index.ts",
+    "dev": "bun run src/index.ts",
+    "dev:blockchain": "ENABLE_BLOCKCHAIN=true bun run src/index.ts",
+    "dev:fast": "TEST_MODE=true GAME_DURATION=300 bun run src/index.ts",
     "watch": "nodemon --exec ts-node src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +30,8 @@
     "cors": "^2.8.5",
     "ethers": "^6.9.2",
     "express": "^4.18.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
@@ -38,6 +40,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
     "jest": "^30.2.0",
